--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -1,3 +1,8 @@
-<% @figures.each do |f| %>
-  <%= f.name %>
-  <% end %>
+<% @figures.each do |figure| %>
+  <a href="/figures/<%= figure.id %> "> <%= figure.name %> </a>
+
+    <% figure.titles.each do |title| %>
+      <%= title.name %>
+    <% end %>
+
+<% end %>
