--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,11 @@
 <h2>All Historical Landmarks</h2>
 
-<!-- add content here -->
-
-<a class="button" href="/figures">Figures</a>
+<% @landmarks.each do |landmark| %>
+<ul>
+  <li><a href="/landmarks/<%= landmark.id %>"> <%= landmark.name %>
+    <%= landmark.year_completed %> </a><br/>
+  </li>
+<% end %>
+</ul>
+<a class="button" href="/landmarks/new">Create New Landmark</a>
 <a class="button" href="/">Home</a>
