--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,12 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
+  <form action="/landmarks" method="POST">
+    <input type="hidden" name="_method" value="PATCH">
+
+
+    <input type="submit" value="Save"
+  </form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
