--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -5,7 +5,7 @@
     <input type="hidden" name="_method" value="PATCH">
 
     <label for="landmark_name">Name</label>
-      <input id="name" type="text" name="landmark[name]" value=" <%= @landmark.name %>"
+      <input id="name" type="text" name="landmark[name]" value= <%= @landmark.name %>
 
     <input type="submit" value="Save"
   </form>
