--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -7,7 +7,9 @@
     <label for="landmark_name">Name</label>
       <input id="name" type="text" name="landmark[name]" value=" <%= @landmark.name %>">
 
-    <input type="submit" value="Save"
+    <label for="landmark_year_completed">Year Completed</label>
+      <input id="year_completed" type="text" name="landmark[year_completed]" value=" <%= @landmark.year_completed %>" >
+    <input type="submit" value="Save">
   </form>
   <br />
 
