--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,7 +1,7 @@
 <h2>Edit Historical Landmark</h2>
 
 <!-- add content here -->
-  <form action="/landmarks" method="POST">
+  <form action="/landmarks/:id" method="POST">
     <input type="hidden" name="_method" value="PATCH">
 
     <label for="landmark_name">Name</label>
